Updated some dependency versions. Fixed the NPC duplication bug from skin requests and improper NPC management